Corrected Evgen's fix for bug #45191. Made sure that join buffers could be used for inner tables of any semi-join when the first match strategy is employed.